<resources>
    <string name="app_name">Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="subtraction">-</string>
    <string name="multiplication">\u00D7"</string>
    <string name="division">\u00F7</string>
    <string name="clearEntry">CE</string>
    <string name="allClear">C</string>
    <string name="right_bracket">)</string>
    <string name="left_bracket">(</string>
    <string name="result">=</string>
    <string name="point">.</string>
    <string name="plus_minus">\u00b1</string>
    <string name="addition">+</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>


</resources>
